[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/player.sprites/player_stand.tres" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/StepSoundPlayer.gd" type="Script" id=3]
[ext_resource path="res://assets/clips/death.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/clips/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/clips/throw.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/clips/pickup.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/clips/step3.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/clips/step1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/clips/step2.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 26.0

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[sub_resource type="CircleShape2D" id=5]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="HoldingShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 2 )
disabled = true

[node name="GroundDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetect"]
visible = false
position = Vector2( 0, 20 )
shape = SubResource( 3 )

[node name="JumpBuffer" type="Timer" parent="."]
one_shot = true

[node name="ActionBuffer" type="Timer" parent="."]
one_shot = true

[node name="PickupDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetect"]
position = Vector2( 0, -16 )
shape = SubResource( 4 )

[node name="InnerBody" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InnerBody"]
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 0.574349

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
attenuation = 0.574349

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 0.574349

[node name="ThrowSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
attenuation = 0.574349

[node name="StepSoundPlayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="StepSound" type="AudioStreamPlayer2D" parent="StepSoundPlayer"]
stream = ExtResource( 9 )
volume_db = -1.0

[node name="StepSound2" type="AudioStreamPlayer2D" parent="StepSoundPlayer"]
stream = ExtResource( 10 )

[node name="StepSound3" type="AudioStreamPlayer2D" parent="StepSoundPlayer"]
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StepSoundPlayer"]
[connection signal="body_entered" from="InnerBody" to="." method="_on_InnerBody_body_entered"]
